--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <ul class="nav-links">
         <li><a href="login.html">Login</a></li>
         <li><a href="#">Register</a></li>
+        <li><a href="makequiz.html">Make a Quiz</a></li>
         <li><a href="#">Take Quiz</a></li>
-        <li><a href="#">Link 4</a></li>
         <li><a href="#">Link 5</a></li>
       </ul>
     </nav>
