--- a/account.html
+++ b/account.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Title plus nav menu-->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Online Quizzes</title>
+  <title>User Account - Online Quizzes</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -21,9 +20,16 @@
       </ul>
     </nav>
   </header>
-<!-- centered title-->
-  <main>
-    <h1 class="welcome">Welcome to Online Quizzes!</h1>
+
+  <main class="account-page">
+    <div class="account-info">
+      <h2>Your Account</h2>
+      <p><strong>First Name:</strong> <span id="first-name">[placeholder]</span></p>
+      <p><strong>Last Name:</strong> <span id="last-name">[placeholder]</span></p>
+      <p><strong>Email:</strong> <span id="email">[placeholder]</span></p>
+      <p><strong>Phone Number:</strong> <span id="phone">[placeholder]</span></p>
+      <p><strong>Username:</strong> <span id="username">[placeholder]</span></p>
+    </div>
   </main>
 </body>
 </html>
