--- a/login.html
+++ b/login.html
@@ -12,8 +12,12 @@
     <nav class="navbar">
       <div class="logo">Online Quizzes</div>
       <ul class="nav-links">
-        <li><a href="login.html">Login</a></li>
         <li><a href="index.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="makequiz.html">Make a Quiz</a></li>
+        <li><a href="takequiz.html">Take Quiz</a></li>
+        <li><a href="account.html">Account</a></li>
       </ul>
     </nav>
   </header>
