--- a/register.html
+++ b/register.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- Title plus nav menu-->
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Online Quizzes</title>
+  <title>Register - Online Quizzes</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -21,9 +20,18 @@
       </ul>
     </nav>
   </header>
-<!-- centered title-->
+
   <main>
-    <h1 class="welcome">Welcome to Online Quizzes!</h1>
+    <form class="register-form">
+      <h2>Create an Account</h2>
+      <input type="text" placeholder="First Name" required />
+      <input type="text" placeholder="Last Name" required />
+      <input type="email" placeholder="Email" required />
+      <input type="tel" placeholder="Phone Number" required />
+      <input type="text" placeholder="Username" required />
+      <input type="password" placeholder="Password" required />
+      <button type="submit">Register</button>
+    </form>
   </main>
 </body>
 </html>
