small typo in quiz controller
fixed create quiz feature

--- a/makequiz.html
+++ b/makequiz.html
@@ -130,7 +130,7 @@
         <div id="questions-container"></div>
         <div class="center-buttons">
           <button type="button" onclick="addQuestion()">
-            Add Another Question
+            Add Question
           </button>
           <button type="button" onclick="endQuizCreation()">
             End Quiz Creation
